--- a/html/02-day.html
+++ b/html/02-day.html
@@ -58,7 +58,7 @@
 
         <!-- Number input for numeric values -->
         <label for="age">Age:</label>
-        <input type="number" name="age" id="age" min="1">
+        <input type="number" name="age" id="age" min="1"> <!-- min use for  Minimum age is 1 -->
         <br><br>
 
         <!-- Dropdown selection -->
